# aig

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: audit.py  auth.py  config.py  db.py  keys.py  main.py  models.py  policy.py  schemas.py
backend/app/routers/: agent_runs.py  agents.py  approvals.py  audit.py  authorize.py  tools.py  wellknown.py
backend/tests/: conftest.py  test_mvp_acceptance.py
dashboard/: Dockerfile  next.config.js  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/agents/: actions.tsx  page.tsx
dashboard/app/api/agents/[agentId]/disable/: route.ts
dashboard/app/api/approvals/[approvalId]/resolve/: route.ts
dashboard/app/api/tools/[toolId]/disable/: route.ts
dashboard/app/approvals/: actions.tsx  page.tsx
dashboard/app/audit/: page.tsx
dashboard/app/runs/: page.tsx
dashboard/app/tools/: actions.tsx  page.tsx
dashboard/components/: StatusTag.tsx
dashboard/lib/: api.ts
examples/: demo_seed.py
sdk/python/: README.md  pyproject.toml
sdk/python/aig_sdk/: __init__.py  client.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: index.ts
