[project]
name = "aig-sdk"
version = "0.1.0"
description = "Python SDK for the Agentic AI Identity Gateway"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aig_sdk*"]
